# Lyzn

./: .dockerignore  .editorconfig  .gitignore  HOW_TO_FIND_CORRECT_FEED_ID.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  VERIFY_PYTH.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/api/chat/: route.ts
app/api/contracts/: route.ts
app/api/orders/: route.ts
app/chat/: page.tsx
app/chat-demo/: page.tsx
app/contact/: page.tsx
app/contract/[id]/: page.tsx
app/create/: page.tsx
app/dashboard/: page.tsx
app/demo/: page.tsx
app/login/: page.tsx
app/marketplace/: page.tsx
app/negotiate/[id]/: page.tsx
app/risks/: page.tsx
app/solutions/: page.tsx
apps/chain-adapter/: .gitignore  go.mod
apps/web/: .env  tsconfig.json
apps/web/prisma/: schema.prisma  seed.ts
apps/web/scripts/: test-pyth.ts
apps/web/src/app/: page.tsx  (+1 more)
components/: Navigation.tsx
contexts/: ContractContext.tsx
lib/: notional-limits.ts  purchaseHelper.ts  rate-limit.ts  supabase-server.ts
lib/shared/: matching.ts
middleware/: rate-limit.ts
programs/risk-exchange/: .gitignore  Anchor.toml  Cargo.toml  Makefile
programs/risk-exchange/src/: lib.rs
programs/risk-exchange/tests/: risk-exchange.ts
scripts/: check-env.sh  fund-dev-wallet.sh  setup.sh  test-pyth.go
server/chain-adapter/: Makefile  main.go
server/web/: next.config.js  package.json
server/web/.next/: app-build-manifest.json  trace
(+199 files in other folders)
