[package]
name = "risk-exchange"
version = "0.1.0"
description = "Non-custodial risk exchange on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "risk_exchange"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
pyth-solana-receiver-sdk = "0.2.0"
